--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <h2>Projects</h2>
             <p>Subscribe with your email address below to get the latest on the re-launch and other news. 
                 Check back here for our new website coming soon! </p>
-            <!-- Begin Mailchimp Signup Form -->
+		
+		
+          <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
@@ -39,7 +41,7 @@
 <div id="mc_embed_signup">
 <form action="https://gmail.us4.list-manage.com/subscribe/post?u=48fadeddf5bd94b4814932180&amp;id=69efdeb4dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe for updates on the drumpshop re-launch and other news!</label>
+	<label for="mce-EMAIL">Subscribe:</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_48fadeddf5bd94b4814932180_69efdeb4dd" tabindex="-1" value=""></div>
@@ -49,6 +51,8 @@
 </div>
 
 <!--End mc_embed_signup-->
+		
+		
          
             <h2>Contact</h2>
             <p>myEmail@email.com</p>
