--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 </div>
 <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
     <div class="content__gdpr">
-        <label>Marketing Permissions</label>
-        <p>Please select all the ways you would like to hear from to be decided:</p>
+        <label>Marketing Permissions (GDPR - you need to check the box for "email"!)</label>
+        <p>Please select how you want to hear from Drumworks:</p>
         <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
 		<label class="checkbox subfield" for="gdpr_36711"><input type="checkbox" id="gdpr_36711" name="gdpr[36711]" value="Y" class="av-checkbox "><span>Email</span> </label><label class="checkbox subfield" for="gdpr_36715"><input type="checkbox" id="gdpr_36715" name="gdpr[36715]" value="Y" class="av-checkbox "><span>Direct Mail</span> </label><label class="checkbox subfield" for="gdpr_36719"><input type="checkbox" id="gdpr_36719" name="gdpr[36719]" value="Y" class="av-checkbox "><span>Customized Online Advertising</span> </label>
         </fieldset>
-        <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+       
     </div>
     <div class="content__gdprLegal">
-        <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
+        <p>We use Mailchimp for marketing. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
     </div>
 </div>
 	<div id="mce-responses" class="clear">
