--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         </div>
         <div class="section-2">
             <h2>Re-launch</h2>
-          <p> Drumworks is soon re-opening to provide your satisfy all your percussion and drumming needs, as well
-              as friendly advice and top-notch music events. </p>
-            <p>Subscribe below with your email address to get the latest on the re-launch and other news.</p>
+          <p> Drumworks is soon re-opening, with percussion, drums, music events and more.</p>
+            <p>Subscribe below (check the box for email - it's GDPR) to get the latest on the re-launch and other news.</p>
 		
 		
           <!-- Begin Mailchimp Signup Form -->
@@ -50,7 +49,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_48fadeddf5bd94b4814932180_69efdeb4dd" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" font-size=150%></div>
     </div>
 </form>
 </div>
