--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <i class="fas fa-drum fa-5x white"></i>
             <h2>Drumworks</h2>
             <p>Southmannagatan, Stockholm.</p>
+		<!-- Don't forget to add links in a href -->
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
         <div class="section-2">
