--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <div id="mc_embed_signup">
 <form action="https://gmail.us4.list-manage.com/subscribe/post?u=48fadeddf5bd94b4814932180&amp;id=69efdeb4dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe:</h2>
+	
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="font-size:16px; width:80% !important;">
 </div>
 <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
     <div class="content__gdpr">
